--- a/ma214310093/disclaimer.html
+++ b/ma214310093/disclaimer.html
@@ -23,7 +23,7 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="index.html">Home</a></li>
-          <li><a href="Shop.html">Shop</a></li>
+          <li><a href="shop.php">Shop</a></li>
         </ul>
         <ul class="pull-right">
           <li><a href="accessories.html">Accessories</a></li>
