--- a/ma214310093/Shop.html
+++ b/ma214310093/Shop.html
@@ -21,6 +21,8 @@
         <ul class="pull-left">
           <li><a href="index.html">Home</a></li>
           <li><a href="Shop.html">Shop</a></li>
+          <li><a href="cart.php">Cart</a></li>
+
         </ul>
         <ul class="pull-right">
           <li><a href="accessories.html">Accessories</a></li>
