--- a/ma214310093/faq.html
+++ b/ma214310093/faq.html
@@ -22,6 +22,8 @@
         <ul class="pull-left">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.php">Shop</a></li>
+          <li><a href="cart.php">Cart</a></li>
+
         </ul>
         <ul class="pull-right">
           <li><a href="accessories.html">Accessories</a></li>
