login/registration compelte +  language change error

--- a/ma214310093/index.html
+++ b/ma214310093/index.html
@@ -13,28 +13,54 @@
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
-  </head>
+    <script src="https://www.google.com/jsapi?key=YOUR_GOOGLE_KEY"></script>
+    <script src="js/language.js"></script>
 
+  </head>
+   
   <body>
  <div class="header">
   <h1 style="font-size: 180px;" class="font_0"><span style="font-size:180px;">  <span style="font-family:avenida-w01,avenida-w02,fantasy;"><span style="font-weight:bold;">Hove Way</span></span></span></h1>
  
   </div>
     <div class="nav">
+
+
+ <div class="box1">
+              <select tabindex="4" class="dropdown">
+
+                    <a href="?lang=en" rel="en">English</a> / <a href="?lang=es" rel="es">Spanish</a> / <a href="?lang=it" rel="it">Italian</a> /
+  <a href="?lang=fr" rel="fr">French</a>
+
+  
+                <option value="" class="label"  >English :</option>
+                <option value="1"    a href="?lang=en" rel="en">English </a></option>
+                <option value="2"    a href="?lang=fr" rel="fr">French  </a> </option>
+                <option value="3"    a href="?lang=es" rel="es">German  </a></option>
+              </select>
+            </div>
+
+
       <div class="container">
         <ul class="pull-left">
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.php">Shop</a></li>
           <li><a href="cart.php">Cart</a></li>
 
+
+
+
+
         </ul>
         <ul class="pull-right">
           <li><a href="accessories.html">Accessories</a></li>
           <li><a href="AboutUs.html">About Us</a></li>
+           <li><a href="index.php">Log In</a></li>
        </ul>
      </div>
-   </div>
 
+   </div>
+<div id="languageBlock">
     <div class="jumbotron">
       <div class="container">
         <h1>Its Rollin Time.</h1>
@@ -42,6 +68,7 @@
         <h4 align="center">"Nothing is impossible, its just a matter of figuring out how".</h4>
       </div>
     </div> 
+ </div>   
    <div class="video">
    <video controls width="800" height="400" >
         <source src="nex.mp4"type"video/mp4">
