--- a/ma214310093/disclaimer.html
+++ b/ma214310093/disclaimer.html
@@ -84,7 +84,7 @@ You are responsible for your own safety, and we highly recommend the use of helm
                 <ul style="list-style: none;">
 					<li><a href="disclaimer.html">Disclaimer</a></li>
 					<li><a href="faq.html">FAQ's</a></li>
-					<li><a href="feedback.html">Give us your Feedback</a></li>
+					<li><a href="feedback_form.php">Give us your Feedback</a></li>
 				</ul>
                 </p>
 				<p class="footer-company-name">SwagForLife &copy; 2015</p>
